<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FragmentEditProduct"
    android:background="@color/product_detail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:contentDescription="Description"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow"
            android:rotation="90"
            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title_edit"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_centerInParent="true" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_id_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Id: 12"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/articulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/nombre_articulo"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="8dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/articulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/precio_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/precio_articulo"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="8dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/precio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cantidad_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/cant_articulo"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="8dp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_delete_product"
        android:text="@string/editar_producto"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cantidad" />
</androidx.constraintlayout.widget.ConstraintLayout>